# embassy-esp32-template

./: .gitpod.Dockerfile  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
