[package]
name = "embassy-esp32"
version = "0.1.0"
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# "feature `embassy-time-systick` includes `esp32c3-hal:embassy-time-systick` which is neither a dependency nor another feature"
default = ["embassy-time-systick"]
embassy-time-systick = ["hal/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
# embassy-time-timg0 = ["hal/embassy-time-timg0", "esp32c3-hal:embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]

# embassy-time-systick = ["hal/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
# embassy-time-timg0 = ["hal/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
# embassy-time-systick = ["embassy-time/tick-hz-16_000_000"]
# embassy-time-timg0 = ["embassy-time/tick-hz-1_000_000"]

[dependencies]
# Base crates
hal = { version = "0.7", package = "esp32c3-hal", features = ["rt", "embassy", "eh1", "vectored", "async", "embassy-time-systick"], git = "https://github.com/esp-rs/esp-hal.git", rev = "2eeb3db" }
esp-backtrace = { version = "0.6", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.4", features = ["esp32c3"] }

# Allocator
esp-alloc = { version = "0.2", features = ["oom-handler"] }

# Embassy 
embassy-executor  = { git = "https://github.com/embassy-rs/embassy.git", rev = "eed34f9", features = ["nightly", "integrated-timers"] }
embassy-time       = { version = "0.1.0", features = ["nightly"] }

# Embedded hal crates
embedded-hal       = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1     = { version = "=1.0.0-alpha.9", package = "embedded-hal" }
embedded-hal-async = { version = "0.1.0-alpha.3" }
embedded-hal-nb    = { version = "=1.0.0-alpha.1" }
embedded-can       = { version = "0.4.1" }

# Cells
static_cell = "1.0"
